--- a/client/index.html
+++ b/client/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
+    <link rel="icon" type="image/png" href="/iconologo.png" />
+    <meta
+      name="description"
+      content="ConenctateSL es una plataforma que le brinda a los usuarios la posibilidad de conocer la informacion de las diferentes localidades del norte de San Luis"
     />
-    <link href="./output.css" rel="stylesheet" />
-    <title>ContectateSF</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ContectateSL</title>
   </head>
   <body>
     <div id="root"></div>
