--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,17 @@
       name="description"
       content="ConenctateSL es una plataforma que le brinda a los usuarios la posibilidad de conocer la informacion de las diferentes localidades del norte de San Luis"
     />
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4M46Q54X65"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-4M46Q54X65'); // Reemplaza con tu ID real
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ContectateSL</title>
   </head>
