--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
       name="description"
       content="ConenctateSL es una plataforma que le brinda a los usuarios la posibilidad de conocer la informacion de las diferentes localidades del norte de San Luis"
     />
+   
+
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-4M46Q54X65"></script>
     <script>
@@ -17,9 +19,14 @@
       gtag('js', new Date());
       gtag('config', 'G-4M46Q54X65'); // Reemplaza con tu ID real
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaN4mQIGcG6imq_K6NpWN1s1JrDqyeLkU"></script>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ContectateSL</title>
+    <link rel="manifest" href="/manifest.json" />
+<meta name="theme-color" content="#007bff" />
+
   </head>
   <body>
     <div id="root"></div>
